--- a/inlex.html
+++ b/inlex.html
@@ -19,11 +19,31 @@
         <div class="input-group">
             <input type="search" name="search" placeholder="Search" class="input-search">
             <button type="submit" class="button-search">
-                <svg class="icon" width = 19px height=19px>
+                <svg class="icon icon-search">
                     <use xlink:href="img/icons.svg#search"></use>
                 </svg>
             </button>
         </div>
+        <div class="icons">
+            <a href="#" class="icons-link">
+                <svg class="icon icon-video" width=27px height=20px>
+                    <use xlink:href="img/icons.svg#video"></use>
+                </svg>
+                <a href="#" class="icons-link">
+                    <svg class="icon icon-apps" width=21px height=21px>
+                        <use xlink:href="img/icons.svg#apps"></use>
+                    </svg>
+                </a>
+                <a href="#" class="icons-link">
+                    <svg class="icon icon-notification" width=22px height=26px>
+                        <use xlink:href="img/icons.svg#notification"></use>
+                    </svg>
+                </a>
+            </a>
+        </div>
+        <a href="#" class="user">
+            <img src="img/user.png" alt="uesr" class="user-img">
+        </a>
     </header>
 </body>
 </html>
